add number of containers to rise

--- a/1-Click-Deploy/gs_installation.properties
+++ b/1-Click-Deploy/gs_installation.properties
@@ -10,5 +10,8 @@ gsVersion=15.2.0
 #Only host1 for 1 machine installation
 #Set 3 hosts for cluster installation
 host1=node1
-host2=node2
-host3=node3
+#host2=node2
+#host3=node3
+#Set number of containers to rise
+#Default is none
+containerCnt=
