--- a/1-Click-Deploy/gs_installation.properties
+++ b/1-Click-Deploy/gs_installation.properties
@@ -15,6 +15,6 @@ host1=node1
 #Set number of containers to rise
 #Default is none
 containerCnt=
-#Set container memory please specify size unites (m/g)
+#Set container memory please specify size units (m/g)
 #Default is 512m
 containerMem=
