--- a/1-Click-Deploy/gs_installation.properties
+++ b/1-Click-Deploy/gs_installation.properties
@@ -1,11 +1,12 @@
-#set here product type to instal
+#gs_installation.properties
+#set here product type to install
 #xap
 #insightedge
 gsType=xap
 #set here product version
 #15.0.2
 #15.0.0
-gsVersion=15.2.0
+gsVersion=15.5.0
 #set host managers here:
 #Only host1 for 1 machine installation
 #Set 3 hosts for cluster installation
@@ -18,3 +19,8 @@ containerCnt=
 #Set container memory please specify size units (m/g)
 #Default is 512m
 containerMem=
+#set here machines OS type to install
+#centos
+#ubuntu
+osType=centos
+
