Update Extend license to April 10th and add open Jdk 11

--- a/1-Click-Deploy/gs_installation.properties
+++ b/1-Click-Deploy/gs_installation.properties
@@ -7,6 +7,10 @@ gsType=xap
 #15.0.2
 #15.0.0
 gsVersion=15.5.1
+#set here open jdk version
+#1.8
+#11
+openJdkVersion=11
 #set host managers here:
 #Only host1 for 1 machine installation
 #Set 3 hosts for cluster installation
