--- a/Cluster_Management_Tools/gs.service
+++ b/Cluster_Management_Tools/gs.service
@@ -7,7 +7,7 @@ Type=simple
 User=ec2-user
 Group=ec2-user
 ExecStart=/bin/bash /usr/local/bin/start_gs.sh
-ExecStop=/bin/bash /opt/gigaspaces-insightedge-enterprise-15.5.1/bin/gs.sh host kill-agent :q 
+ExecStop=/bin/bash /usr/local/bin/stop_gs.sh
 RemainAfterExit=yes
 
 [Install]
