--- a/1-Click-Deploy/gs_installation.properties
+++ b/1-Click-Deploy/gs_installation.properties
@@ -6,7 +6,7 @@ gsType=xap
 #set here product version
 #15.0.2
 #15.0.0
-gsVersion=15.5.1
+gsVersion=15.8.0
 #set here open jdk version
 #1.8
 #11
@@ -26,6 +26,7 @@ containerMem=
 #set here machines OS type to install
 #centos
 #ubuntu
+#awsLinux2
 osType=centos
 #Set hostname or ip for GS_NIC_ADDRESS to use
 nicAddr=
