--- a/catalogue-service/src/main/resources/application.properties
+++ b/catalogue-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 logging.level.org.springframework.web = DEBUG
+logging.level.com.odsx.services = INFO
 server.port = 3211
 
 spring.thymeleaf.cache=false
