Added Table catalogue page. Updated table display css in Service and Table catalogue table Change URI of service catalogue from "/" to "/services" because new controller "/metadata" added Added code to generate log filder under <gs_odsx>/logs directory

--- a/catalogue-service/src/main/resources/application.properties
+++ b/catalogue-service/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-logging.level.org.springframework.web = DEBUG
+log.location=${HOME}
+logging.file.name=${log.location}/catalogue-service.log
+logging.level.org.springframework.web = INFO
 logging.level.com.odsx.services = INFO
 server.port = 3211
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.suffix=.html
-
+spring.output.ansi.enabled=ALWAYS
 ##
 consul.host:localhost
 consul.catalog.endpoint=http://${consul.host}:8500/v1/catalog
