Fix issued and implemented feedback related to Data Validator

--- a/data-validator/data-validator-server/src/main/resources/application.properties
+++ b/data-validator/data-validator-server/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=7890
-logging.file.name=/home/datavalidator.log
+logging.file.name=/home/gsods/datavalidator.log
+pathToDataBase=/home/gsods/datavalidator.db
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
