--- a/data-validator/data-validator-agent/pom.xml
+++ b/data-validator/data-validator-agent/pom.xml
@@ -70,11 +70,32 @@
             <artifactId>jcc</artifactId>
             <version>11.1.4.4</version>
         </dependency> -->
-        <dependency>
+        <!-- <dependency>
             <groupId>com.ibm.db2.jcc</groupId>
                 <artifactId>db2jcc4</artifactId>
                 <version>4.31.10 </version>
+        </dependency> -->
+        <!-- https://mvnrepository.com/artifact/com.ibm.db2.jcc/db2jcc4 -->
+        <dependency>
+            <groupId>com.ibm.db2.jcc</groupId>
+            <artifactId>db2jcc4</artifactId>
+            <version>4.26.14</version>
         </dependency>
+        <dependency>
+            <groupId>com.ibm.db2.jcc</groupId>
+            <artifactId>db2jcc4license</artifactId>
+            <version>4.16.53</version>
+        </dependency>
+
+        <!--<dependency>
+            <groupId>db2jcc</groupId>
+            <artifactId>db2jcc</artifactId>
+            <scope>system</scope>
+            <version>1.0</version>
+            <systemPath>${project.basedir}/libs/db2jcc-4.26.14.jar</systemPath>
+        </dependency> -->
+
+
         <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/sqljdbc4 -->
         <!--<dependency>
             <groupId>com.microsoft.sqlserver</groupId>
@@ -85,7 +106,7 @@
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
-            <version>6.1.0.jre8</version>
+            <version>7.4.1.jre8</version>
         </dependency>
 
 		<dependency>
@@ -106,6 +127,21 @@
 			<artifactId>sqlite-dialect</artifactId>
 			<version>1.0</version>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.drill.exec</groupId>
+            <artifactId>drill-jdbc-all</artifactId>
+            <version>1.16.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.2</version>
+        </dependency>
 
     </dependencies>
 
