--- a/data-validator/data-validator-server/src/main/resources/application.properties
+++ b/data-validator/data-validator-server/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=7890
 logging.file.name=/home/gsods/datavalidator.log
 pathToDataBase=/home/gsods/datavalidator.db
+#logging.file.name=datavalidator.log
+#pathToDataBase=datavalidator.db
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
