removed service name from the metadata endpoint url as per microservices implementation on bll code refactoring.

--- a/catalogue-service/src/main/resources/application.properties
+++ b/catalogue-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 log.location=${HOME}
 logging.file.name=${log.location}/catalogue-service.log
 logging.level.org.springframework.web = INFO
-logging.level.com.odsx.services = INFO
+logging.level.com.odsx.services = DEBUG
 server.port = 3211
 
 spring.thymeleaf.cache=false
