--- a/Bi_Optional_pu/src/main/resources/gs-service-config.yaml
+++ b/Bi_Optional_pu/src/main/resources/gs-service-config.yaml
@@ -2,4 +2,4 @@ space:
   name: space
   propertyFilePath: spaceproperty.properties
 tieredCriteriaConfig:
-  filePath: ''
+  filePath: TieredCriteria.tab
