--- a/Bi_Optional_pu/src/main/resources/spaceproperty.properties
+++ b/Bi_Optional_pu/src/main/resources/spaceproperty.properties
@@ -3,3 +3,4 @@ space-config.engine.memory_usage.write_only_block_percentage=96
 space-config.engine.memory_usage.write_only_check_percentage=95
 space-config.engine.memory_usage.gc-before-shortage=false
 cluster-config.groups.group.repl-policy.recovery-chunk-size=200
+space-config.engine.cache_policy=4
