--- a/retention-manager/src/main/resources/application.properties
+++ b/retention-manager/src/main/resources/application.properties
@@ -6,12 +6,12 @@ logging.file.name=${log.location}/retention-manager.log
 
 # Database
 db.location=/home/himali/sqlite/retention-manager.db
-#db.location=/home/ec2-user/gs-odsx-2.7/systemServices/retentionManager/retention-manager.db
 db.driver= org.sqlite.JDBC
 db.url = jdbc:sqlite:${db.location}
 
 
 # Hibernate
+ddl.auto=validate
 hibernate.dialect=org.hibernate.dialect.SQLiteDialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto= validate
