--- a/objectManagement/src/main/resources/application.properties
+++ b/objectManagement/src/main/resources/application.properties
@@ -1,4 +1,20 @@
-spring.application.name=objectmanagement
+spring.application.name=object-management
 server.port=7001
 spring.mvc.converters.preferred-json-mapper=gson
-logging.file.name=/home/gsods/gs-objectmanagement.log
+logging.level.org.springframework.web = DEBUG
+log.location=${HOME}
+logging.file.name=${log.location}/object-management.log
+
+
+#GS Manager
+lookup.group=
+lookup.locator=localhost:4174
+gs.username=
+gs.password=
+
+odsx.profile=
+ddl.properties.file.path=
+space.name=
+table.batch.file.path=
+tier.criteria.file=
+
