get the lookup from from application properties passed as jar arguments instead of direct REST Call.

--- a/retention-manager/src/main/resources/application.properties
+++ b/retention-manager/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #Space
 space.name=bll
 manager.host=localhost
+lookup.group=
 manager.info.url=http://${manager.host}:8090/v2/info
 gigaspaces.jdbc.url=jdbc:gigaspaces:v3://${manager.host}:4174/${space.name}
 
