added config for settings menu

--- a/cockpit/config/menu.yaml
+++ b/cockpit/config/menu.yaml
@@ -287,19 +287,19 @@ description: ''
 5:
     id: 'Settings'
     type: 'menu'
-    description: 'this is a description for settings'
+    description: 'Display Cockpit settings'
     1: 
         id: 'IP/Endpoint for PROD'   
         type: 'command'
-        exec-type: ''
-        exec: ''
-        description: 'add description here'
+        exec-type: 'script'
+        exec: 'get_prd_params.py'
+        description: 'Show/Setup network settings for PROD'
     2:
         id: 'IP/Endpoint for DR'
         type: 'command'
-        exec-type: ''
-        exec: ''
-        description: 'add description here'
+        exec-type: 'script'
+        exec: 'get_dr_params.py'
+        description: 'Show/Setup network settings for DR'
     3:
         id: 'Cockpit DB'
         type: 'command'
