added scriptions and execution scripts

--- a/cockpit/config/menu.yaml
+++ b/cockpit/config/menu.yaml
@@ -100,7 +100,7 @@ description: ''
 2:
     id: 'Jobs'
     type: 'menu'
-    description: 'Job represents the "atomic component" associated with a task'
+    description: 'A job is the "atomic component" associated with a task'
     1: 
         id: 'Jobs Catalog'
         type: 'menu'
@@ -109,19 +109,19 @@ description: ''
             id: 'List Jobs'
             type: 'command'
             exec-type: 'script'
-            exec: 'job_sample.sh'
+            exec: 'list_jobs.py'
             description: 'List registered jobs'
         2:
             id: 'Show Jobs'
             type: 'command'
-            exec-type: ''
-            exec: ''
+            exec-type: 'script'
+            exec: 'show_jobs.py'
             description: 'Show selected job information'
         3:
             id: 'Test Job'
             type: 'command'
-            exec-type: ''
-            exec: ''
+            exec-type: 'script'
+            exec: 'test_job.py'
             description: 'Try/Test a selected job'
     2:
         id: 'Create New Job'
@@ -188,7 +188,7 @@ description: ''
 3:
     id: 'Policies'
     type: 'menu'
-    description: 'this is a description for policies'
+    description: 'A policy defines when and how a task is executed'
     1: 
         id: 'Policies Catalog'
         type: 'menu'
@@ -254,7 +254,7 @@ description: ''
 4:
     id : 'Reporting'
     type: 'menu'
-    description: 'this is a description for reporting'
+    description: 'Explore statistics of cockpit elements'
     1: 
         id: 'Task Execution'
         type: 'menu'
