--- a/cockpit/config/config.yaml
+++ b/cockpit/config/config.yaml
@@ -1,17 +1,17 @@
 params:
   cockpit:
-    db_home: /tmp/sqlite
-    db_name: cp.db
+    db_home: ''
+    db_name: ''
   dr:
     endpoints:
-      pivot: 2.2.2.2
+      pivot: ''
       rest: ''
     variables:
       pivot: PIVOT_DR
       rest: ENDPOINT_DR
   prd:
     endpoints:
-      pivot: 1.1.1.1
+      pivot: ''
       rest: ''
     variables:
       pivot: PIVOT_PRD
